@@ -1,58 +1,95 @@
 package com.entreprise.gestion.config;
 
+import com.entreprise.gestion.rh.service.CustomUserDetailsService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.crypto.password.NoOpPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import jakarta.servlet.http.HttpServletResponse;
+import java.util.Arrays;
 import java.util.List;
-import org.springframework.security.config.Customizer;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 
 @Configuration
-@EnableWebSecurity
+@EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
+    @Value("${ip.server}")
+    private String ipServer;
+
+    private final CustomUserDetailsService userDetailsService;
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return NoOpPasswordEncoder.getInstance();
+    }
+
+    // ✅ AuthenticationProvider pour utiliser CustomUserDetailsService
+    @Bean
+    public DaoAuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider(userDetailsService);
+        provider.setPasswordEncoder(passwordEncoder());
+        return provider;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+        return authConfig.getAuthenticationManager();
+    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // Active CORS
-                .cors(Customizer.withDefaults())
-                // Désactive CSRF
-                .csrf(csrf -> csrf.disable())
-                
-                // Le reste de la configuration...
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/public/**").permitAll()
-                        .anyRequest().authenticated()
-                );
+            .csrf(csrf -> csrf.disable()) // désactiver CSRF si tu testes avec Postman/React
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/api/utilisateur/login", "/api/public/**").permitAll() // login ouvert
+                .anyRequest().authenticated() // tout le reste nécessite une auth
+            )
+            .formLogin(form -> form.disable()) // pas de formulaire HTML
+            .httpBasic(httpBasic -> httpBasic.disable()) // pas de basic auth
+            .logout(logout -> logout.permitAll()) // logout dispo
+            .sessionManagement(session -> session
+                .maximumSessions(1) // une session max
+            )
+            // ✅ Correctif ici
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()));
 
         return http.build();
     }
+
+
+    // ✅ Définition de CORS ici
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Autoriser tes origines (par ex: React frontend sur localhost:3000)
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-
-        // Méthodes HTTP autorisées
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        // Headers autorisés
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-
-        // Autoriser l’envoi de credentials (JWT, cookies, etc.)
-        configuration.setAllowCredentials(true);
-
+        configuration.setAllowedOrigins(Arrays.asList("http://"+ipServer+":5173","http://localhost","http://"+ipServer));
+        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true); // utile si tu envoies des cookies ou Authorization
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
+    }
+
+    @Bean
+    public AccessDeniedHandler accessDeniedHandler() {
+        return (request, response, accessDeniedException) -> {
+            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+            response.getWriter().write("Accès interdit : vous n'avez pas les droits !");
+        };
     }
 }
